@@ -12,17 +12,17 @@ TS_power_drain=Passive energy consumption (%)
 TS_max_research_level=Maximum research level
 
 [mod-setting-description]
-TS_base_shield=Starting Capacity of Shield
-TS_base_charge_rate=Starting Charge Rate of Sheild
+TS_base_shield=Starting Capacity of Shield (50 - [200] - 10000)
+TS_base_charge_rate=Starting Charge Rate of Sheild (1 - [20] - 1000)
 TS_research_enabled=With this option, you have to research the shields instead of getting them for free\nCan be toggled on and off freely
-TS_research_size=The number of steps per order of manitude in shield capacity research (100 - 10 - 1).
-TS_research_speed=The number of steps per order of manitude in shield charge rate research (100 - 10 - 1).
+TS_research_size=The number of steps per order of manitude in shield capacity research (100 - [5] - 1).
+TS_research_speed=The number of steps per order of manitude in shield charge rate research (100 - [5] - 1).
 TS_alternate_effect=Replaces the visual effect of the shield by an alternate, animated version.
 TS_energy_consumption=Recharging shields now requires electricity
-TS_energy_consumption_multiplier=Here you can set a multiplier for the energy cost per hitpoint. 1 = 1KJ/hitpoint. \n(0.01 - 2.00 - 100.0)
+TS_energy_consumption_multiplier=Here you can set a multiplier for the energy cost per hitpoint. 1 = 1KJ/hitpoint. \n(0.01 - [25.00] - 100.0)
 TS_penalty=When there's not enough energy available, shields loose the given percentage of their maximum charge per second.
-TS_power_drain=A value of 1 here means a 10k shield cap, means 100KW drain per shield.
-TS_max_research_level=Helps alleviate failures to start due to 'Reached id limit for entity'. A value of 100 here means 100^2 or 10,000 entities will be created. Factorio has a limit of 65536 entity definitions.
+TS_power_drain=A value of 1 here means a 10k shield cap, means 100KW drain per shield. (0.1 - [10] - 50)
+TS_max_research_level=Helps alleviate failures to start due to 'Reached id limit for entity'. A value of 100 here means 100^2 or 10,000 entities will be created. Factorio has a limit of 65536 entity definitions. (5 - [25] - 100)
 
 [technology-name]
 turret-shields-base=Turret energy shields
