@@ -3,6 +3,7 @@ local neutral_flags = {"not-repairable", "not-blueprintable", "not-deconstructab
 --These have to be here since the global variable doesn't exist when this file is parsed.
 local energy_consumption_multiplier = settings.startup["TS_energy_consumption_multiplier"].value
 local power_usage = settings.startup["TS_power_drain"].value/100
+local drain = (capacity/energy_consumption_multiplier) * power_usage
 
 local max_research_lvl = settings.startup["TS_max_research_level"].value
 
@@ -31,9 +32,9 @@ for size=-1,max_research_lvl,1 do
 				{
 					type = "electric",
 					usage_priority = "secondary-input",
-					input_flow_limit = recharge .. "kW",
+					input_flow_limit = recharge + drain .. "kW",
 					buffer_capacity = capacity .. "kJ",
-					drain = (capacity/energy_consumption_multiplier) * power_usage .. "kW",
+					drain = drain .. "kW",
 				},
 				enable_gui = false,
 			},-------------------------------------------------------------------------------------------------------------------------------
