@@ -3,8 +3,8 @@ data:extend(
     type = "double-setting",
     name = "TS_energy_consumption_multiplier",
     setting_type = "startup",
-    default_value = 2,
-    maximum_value = 100,
+    default_value = 25,
+    maximum_value = 250,
     minimum_value = 0.01,
 	order = "a",
     per_user = false,
@@ -25,7 +25,7 @@ data:extend(
     setting_type = "startup",
     default_value = 20,
     maximum_value = 1000,
-    minimum_value = 0,
+    minimum_value = 1,
 	order = "b",
     per_user = false,
 	},
